-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 13.0.1
-
None
-
-
92761ad29 (14.0), a41c4de3d (14.0)
There is no ability to move source files between directories in the project tree, so I renamed a header file with new directory prefix. There was a dialog which asked if I would like to reanme a .cpp file too, I answered 'yes'.
As the result Qt Creator got stuck, but in file manager I can see that new directory was created and my header file was moved inside, but .cpp file was left unchanged.
Also I noticed a temporary CmakeLists file being recreated again and again (see 2024-05-18 17-20-29.mkv) until Qt Creator process was killed
For Gerrit Dashboard: QTCREATORBUG-30830 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
568743,2 | PE: Allow candidate renaming with sub directories | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |
568744,3 | CMakePM: Do not hang on renaming files in parent directories | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |