PE: Allow candidate renaming with sub directories

This would allow renaming of:
myclass.h myclass.cpp -> my/class.h my/class.cpp

Fixes: QTCREATORBUG-30830
Change-Id: Ic7f277e52a52dfe6745023f550072a935295bcac
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>